# zsui

./: .gitignore  AGENTS.md  Cargo.toml  README.en.md  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml  native-proof.yml  star-history.yml  star-progress.yml  ui-memory-comparison.yml
comparisons/common/: memory_probe.rs
comparisons/egui_notepad/: Cargo.toml
comparisons/egui_notepad/src/: main.rs
comparisons/iced_notepad/: Cargo.toml
comparisons/iced_notepad/src/: main.rs
comparisons/scripts/: capture_linux_smaps.py  summarize_memory.py
comparisons/slint_notepad/: Cargo.toml
comparisons/slint_notepad/src/: main.rs
comparisons/tauri_notepad/: Cargo.toml  build.rs  tauri.conf.json  tauri.perf-common.conf.json  tauri.perf-full.conf.json  tauri.perf-minimal.conf.json  tauri.perf-viewer.conf.json
comparisons/tauri_notepad/capabilities/: default.json
comparisons/tauri_notepad/frontend/: app.js  index.html  invoice.css  invoice.html  invoice.js  styles.css
comparisons/tauri_notepad/frontend-perf/common/: invoice.html
comparisons/tauri_notepad/frontend-perf/full/: index.html
comparisons/tauri_notepad/frontend-perf/minimal/: index.html
comparisons/tauri_notepad/frontend-perf/viewer/: index.html
comparisons/tauri_notepad/src/: main.rs
docs/: ai-agent.md  architecture.md  calculator-demo.md  framework-goals.md  gallery.md  image-preview.md  invoice-workbench-comparison.md  localization.md  native-host-smoke.md  native-icons.md  notepad-demo.md  paged-virtual-list.md  platform-design-contracts.md  porting.md  ui-document.md  ui-performance-matrix.md  v0.2-desktop-native.md  v0.3-native-proof-ci.md
docs/ai/: context-packs.json  project-memory.md  reference.md
docs/platform-proof/: manifest.json
docs/platform-proof/linux/: README.md  gallery-inputs-light.json  notepad-interaction-lite.json  notepad-interaction.json
docs/platform-proof/macos/: README.md  gallery-inputs-light.json  notepad-interaction.json
docs/platform-proof/windows/: README.md  bidi-navigation-smoke-report.json  notepad-interaction.json  showcase-smoke-report.json
docs/releases/: v0.2.0-preview.1.md  v0.2.0-preview.2.md  v0.2.0-preview.3.md  v0.2.0-preview.4.md  v0.2.0-preview.5.md  v0.2.0-preview.6.md
docs/skills/zsui-native-ui/: SKILL.md
docs/skills/zsui-native-ui/agents/: openai.yaml
docs/skills/zsui-native-ui/references/: native-ui-entrypoints.md
examples/: basic.rs  codex_zsui.rs  component_gallery.rs  declaration_audit.rs  desktop_native_showcase.rs  image_preview.rs  invoice_workbench.rs  list_selection.rs  localization.rs  mobile_scaffold_manifest.rs  native_smoke_manifest.rs  native_smoke_record.rs  native_smoke_review.rs  native_smoke_run.rs  native_window.rs  navigation_shell_layout.rs  paged_virtual_list.rs  product_adapter.rs  product_adapter_native_driver.rs  product_adapter_smoke.rs  product_adapter_view.rs  rust_first_view.rs  scroll_view.rs  ui_performance_minimal.rs  workbench_shell.rs  zsui_calculator.rs  zsui_notepad.rs
examples/ui-documents/: auto-suggest.bindings.json  auto-suggest.json  auto-suggest.values.json  badge.bindings.json  badge.json  badge.values.json  basic.bindings.json  basic.json  basic.values.json  breadcrumb.bindings.json  breadcrumb.json  breadcrumb.values.json  canvas.bindings.json  canvas.json  canvas.values.json  color-picker.bindings.json  color-picker.json  color-picker.values.json  command-bar.bindings.json  command-bar.json  command-bar.values.json  command-palette.bindings.json  command-palette.json  command-palette.values.json  content-dialog.bindings.json  content-dialog.json  content-dialog.values.json  date-picker.bindings.json  date-picker.json  date-picker.values.json  flyout.bindings.json  flyout.json  flyout.values.json  grid-view.bindings.json  grid-view.json  grid-view.values.json  icon.bindings.json  icon.json  icon.values.json  image.bindings.json  (+55 more)
examples/zsui_calculator/: windows.rs
examples/zsui_notepad/: document.rs  windows.rs
scripts/: ai-context.ps1  check-desktop-proof.ps1  check-feature-matrix.ps1  check-native-boundary.ps1  check-windows-gui-subsystem.ps1  check-windows-menu-flyout-accessibility.ps1  check-windows-text-accessibility.ps1  generate-calculator-icon.ps1  measure-calculator-comparison.ps1  measure-invoice-ui-comparison.ps1  measure-notepad-comparison.ps1  measure-ui-performance-matrix.ps1  update-star-history.ps1  update-star-progress.ps1
src/: agent_context.rs  android_activity_host.rs  app.rs  app_command.rs  auto_suggest.rs  badge.rs  breadcrumb.rs  calculator.rs  canvas.rs  capability.rs  clipboard.rs  color_picker.rs  command_palette.rs  command_protocol.rs  component_catalog.rs  component_protocol.rs  components.rs  content_dialog.rs  control_protocol.rs  core.rs  date.rs  desktop_services.rs  document_shell.rs  event_protocol.rs  feature_manifest.rs  flyout.rs  framework_goals.rs  geometry.rs  grid_view.rs  harmony_ability_host.rs  host.rs  host_protocol.rs  hotkey.rs  icon.rs  image_preview.rs  info_bar.rs  lib.rs  linux_direct.rs  linux_direct_accessibility.rs  linux_direct_icons.rs  (+61 more)
src/platform/: backend_profile.rs  component_profile.rs  experience.rs  identity.rs  menu_accelerator.rs  style.rs  text_shaper_boundary.rs
src/platform/component_profile/: gtk.rs  macos.rs  mod.rs  windows.rs
src/platform/desktop_runtime/: linux_direct.rs  linux_gtk.rs  macos.rs  mod.rs  process_memory.rs  unsupported.rs  windows.rs  windows_smoke.rs  winit.rs  winit_smoke.rs
src/platform/windows/: application.rs  dpi.rs  mod.rs  popup.rs  tests.rs  timer.rs  window.rs  window_proc.rs
src/platform/windows/input/: focus.rs  ime.rs  keyboard.rs  mod.rs  pointer.rs  runtime.rs
src/platform/windows/services/: clipboard.rs  dialog.rs  hotkey.rs  menu.rs  tray.rs
src/platform/windows/text/: composition.rs  edit_host.rs
src/view/: event.rs  focus.rs  layout.rs  mod.rs  node.rs  overlay.rs  paint.rs  tests.rs
src/view/widgets/: badge.rs  button.rs  calculator.rs  canvas.rs  data.rs  flyout.rs  icon.rs  input.rs  menu_flyout.rs  mod.rs  navigation.rs  selection.rs  split_view.rs
