[package]
name = "zsui"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/qiu7824/zsui"
description = "Rust-first native system UI declarations and host contracts."
readme = "README.md"

[dependencies]
arboard = { version = "3.4", optional = true }
png = { version = "0.18", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1.42.1", default-features = false, features = ["maths", "std"], optional = true }

[target.'cfg(any(target_os = "macos", all(target_os = "linux", not(target_env = "ohos"))))'.dependencies]
winit = { version = "0.30", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", optional = true, features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_UI_Controls", "Win32_UI_Controls_Dialogs", "Win32_UI_HiDpi", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[features]
default = ["window", "button", "label"]
window = ["windows-win32", "desktop-winit"]
button = ["widgets-base"]
label = ["widgets-base"]
widgets-base = []
widgets-input = []
widgets-list = []
scroll = []
list = ["widgets-list", "scroll"]
textbox = ["widgets-input"]
checkbox = ["widgets-input"]
toggle = ["widgets-input"]
table = ["list", "scroll"]
dark-mode = []
style = []
shell = []
workbench = ["button", "label", "scroll", "textbox", "style"]
document-shell = ["style"]
calculator = ["style", "dep:rust_decimal"]
tray = ["shell"]
hotkey = ["shell"]
settings = ["widgets-input", "widgets-list", "toggle"]
product-adapter = []
android = []
harmony = []
mobile = ["android", "harmony"]
clipboard = ["dep:arboard"]
image = ["dep:png"]
native-smoke = ["image"]
notepad-demo = ["windows-win32", "document-shell"]
calculator-demo = ["windows-gdi", "calculator"]
desktop-winit = ["dep:winit"]
windows-gdi = ["dep:windows-sys", "image"]
windows-win32 = ["windows-gdi"]
all-widgets = ["button", "label", "scroll", "list", "textbox", "checkbox", "toggle", "table", "workbench"]
full = [
    "all-widgets",
    "clipboard",
    "calculator",
    "dark-mode",
    "document-shell",
    "desktop-winit",
    "hotkey",
    "mobile",
    "native-smoke",
    "product-adapter",
    "settings",
    "style",
    "tray",
    "window",
]

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[dev-dependencies]
serde_json = "1"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "declaration_audit"
path = "examples/declaration_audit.rs"
required-features = ["button", "label"]

[[example]]
name = "rust_first_view"
path = "examples/rust_first_view.rs"
required-features = ["button", "label", "textbox", "toggle"]

[[example]]
name = "workbench_shell"
path = "examples/workbench_shell.rs"
required-features = ["workbench", "window"]

[[example]]
name = "zsui_notepad"
path = "examples/zsui_notepad.rs"
required-features = ["notepad-demo"]

[[example]]
name = "zsui_calculator"
path = "examples/zsui_calculator.rs"
required-features = ["calculator-demo"]

[[example]]
name = "list_selection"
path = "examples/list_selection.rs"
required-features = ["list", "label"]

[[example]]
name = "scroll_view"
path = "examples/scroll_view.rs"
required-features = ["scroll", "label"]

[[example]]
name = "product_adapter_view"
path = "examples/product_adapter_view.rs"
required-features = ["button", "label"]
