[package]
name = "zsui"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/qiu7824/zsui"
description = "Rust-first feature-gated native UI framework for Win32, AppKit, and GTK4."
readme = "README.md"

[dependencies]
arboard = { version = "3.4", optional = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"], optional = true }
png = { version = "0.18", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1.42.1", default-features = false, features = ["maths", "std"], optional = true }

[target.'cfg(any(target_os = "macos", all(target_os = "linux", not(target_env = "ohos"))))'.dependencies]
winit = { version = "0.30", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", optional = true }
objc2-app-kit = { version = "0.3", optional = true, default-features = false, features = ["std", "objc2-core-foundation", "NSAppearance", "NSApplication", "NSAttributedString", "NSBezierPath", "NSCell", "NSColor", "NSColorSpace", "NSEvent", "NSFont", "NSFontDescriptor", "NSGraphics", "NSGraphicsContext", "NSImage", "NSMenu", "NSMenuItem", "NSOpenPanel", "NSParagraphStyle", "NSPasteboard", "NSRunningApplication", "NSSavePanel", "NSPanel", "NSResponder", "NSStringDrawing", "NSText", "NSTextInputClient", "NSTextInputContext", "NSTrackingArea", "NSView", "NSWindow"] }
objc2-foundation = { version = "0.3", optional = true }

[target.'cfg(all(target_os = "linux", not(target_env = "ohos")))'.dependencies]
gtk4 = { version = "0.11", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", optional = true, features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_System_Registry", "Win32_UI_Accessibility", "Win32_UI_Controls", "Win32_UI_Controls_Dialogs", "Win32_UI_HiDpi", "Win32_UI_Input_Ime", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[features]
default = ["window", "button", "label"]
window = ["windows-win32", "macos-appkit", "linux-gtk"]
button = ["widgets-base"]
label = ["widgets-base"]
grid = ["widgets-base"]
widgets-base = []
widgets-input = []
widgets-list = []
scroll = []
list = ["widgets-list", "scroll"]
virtual-list = ["list", "scroll"]
paged-list = ["virtual-list"]
textbox = ["widgets-input"]
checkbox = ["widgets-input"]
toggle = ["widgets-input"]
slider = ["widgets-input"]
number-box = ["widgets-input"]
radio = ["widgets-input"]
progress = ["widgets-base"]
combo = ["widgets-input"]
date-picker = ["widgets-input", "dep:chrono"]
time-picker = ["widgets-input"]
tabs = ["widgets-base"]
table = ["list", "scroll"]
dark-mode = []
style = []
shell = []
workbench = ["button", "label", "scroll", "textbox", "style"]
document-shell = ["style"]
calculator = ["style", "dep:rust_decimal"]
tray = ["shell"]
hotkey = ["shell"]
settings = ["widgets-input", "widgets-list", "toggle"]
product-adapter = []
android = []
harmony = []
mobile = ["android", "harmony"]
clipboard = ["dep:arboard"]
image = ["dep:png"]
native-smoke = ["image"]
fluent-icons = []
notepad-demo = ["windows-win32", "document-shell"]
calculator-demo = ["windows-gdi", "calculator"]
desktop-winit = ["dep:winit"]
windows-gdi = ["dep:windows-sys", "image"]
windows-win32 = ["windows-gdi"]
macos-appkit = ["dep:objc2", "dep:objc2-app-kit", "dep:objc2-foundation"]
linux-gtk = ["dep:gtk4"]
desktop-native = ["windows-win32", "macos-appkit", "linux-gtk"]
all-widgets = ["button", "label", "grid", "scroll", "list", "virtual-list", "paged-list", "textbox", "checkbox", "toggle", "slider", "number-box", "radio", "progress", "combo", "date-picker", "time-picker", "tabs", "table", "workbench"]
full = [
    "all-widgets",
    "clipboard",
    "calculator",
    "dark-mode",
    "document-shell",
    "desktop-native",
    "desktop-winit",
    "hotkey",
    "mobile",
    "native-smoke",
    "product-adapter",
    "settings",
    "style",
    "tray",
    "window",
]

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[dev-dependencies]
serde_json = "1"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "declaration_audit"
path = "examples/declaration_audit.rs"
required-features = ["button", "label"]

[[example]]
name = "rust_first_view"
path = "examples/rust_first_view.rs"
required-features = ["button", "label", "textbox", "toggle"]

[[example]]
name = "workbench_shell"
path = "examples/workbench_shell.rs"
required-features = ["workbench", "window"]

[[example]]
name = "zsui_notepad"
path = "examples/zsui_notepad.rs"
required-features = ["notepad-demo"]

[[example]]
name = "zsui_calculator"
path = "examples/zsui_calculator.rs"
required-features = ["calculator-demo"]

[[example]]
name = "list_selection"
path = "examples/list_selection.rs"
required-features = ["list", "label"]

[[example]]
name = "scroll_view"
path = "examples/scroll_view.rs"
required-features = ["scroll", "label"]

[[example]]
name = "paged_virtual_list"
path = "examples/paged_virtual_list.rs"
required-features = ["window", "button", "label", "paged-list"]

[[example]]
name = "desktop_native_showcase"
path = "examples/desktop_native_showcase.rs"
required-features = ["desktop-native", "window", "button", "label", "textbox", "toggle", "list", "scroll", "style"]

[[example]]
name = "product_adapter_view"
path = "examples/product_adapter_view.rs"
required-features = ["button", "label"]
