[package]
name = "egui-notepad-baseline"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "egui-invoice-tool"
path = "src/bin/invoice_tool.rs"

[[bin]]
name = "egui-ui-performance"
path = "src/bin/ui_performance.rs"
required-features = ["perf-matrix"]

[features]
perf-matrix = []
perf-minimal = ["perf-matrix"]
perf-full = ["perf-matrix"]
perf-viewer = ["perf-matrix"]

[dependencies]
eframe = { version = "=0.35.0", default-features = false, features = ["default_fonts", "glow"] }
rfd = "=0.17.2"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
